# projeto-ml

./: app.py  pyproject.toml
tests/: testes.ipynb
